# osac-test-infra

./: .gitignore  CLAUDE.md  README.md  ansible.cfg  pyproject.toml
.github/workflows/: pre-commit.yaml
features/: hub_creation.feature  vm_creation.feature
inventory/: localhost.yml
inventory/group_vars/: all.yml
playbooks/: test_compute_instance_api_fields.yml  test_compute_instance_cli_fields.yml  test_compute_instance_creation.yml  test_compute_instance_delete_during_provision.yml  test_hub_creation.yml  test_vm_creation.yml
roles/fulfillment_cli_base/defaults/: main.yml
roles/fulfillment_cli_base/meta/: main.yml
roles/fulfillment_cli_base/tasks/: main.yml
roles/test_compute_instance_api_fields/: README.md
roles/test_compute_instance_api_fields/defaults/: main.yml
roles/test_compute_instance_api_fields/tasks/: main.yml
roles/test_compute_instance_api_fields/templates/: computeinstance.yml.j2
roles/test_compute_instance_cli_fields/defaults/: main.yml
roles/test_compute_instance_cli_fields/meta/: main.yml
roles/test_compute_instance_cli_fields/tasks/: main.yml
roles/test_compute_instance_creation/defaults/: main.yml
roles/test_compute_instance_creation/tasks/: delete_compute_instance.yml  main.yml
roles/test_compute_instance_restart/tasks/: main.yml
roles/test_hub_creation/defaults/: main.yml
roles/test_hub_creation/handlers/: main.yml
roles/test_hub_creation/meta/: main.yml
roles/test_hub_creation/tasks/: main.yml
tests/: conftest.py
tests/step_defs/: test_hub_creation.py  test_vm_creation.py
(+4 files in other folders)
